--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="mongodb+srv://dodslim100:kUMLmCS2V6SIikmu@cluster0.s7g6m3v.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+DATABASE_URL="mongodb+srv://association_avas:1234avas@cluster0.jhvteip.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET="Waffels happy customer"
 API_KEY_GEN="hello world"
 API_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJrZXkiOiJoZWxsbyB3b3JsZCIsImlhdCI6MTc1MzE4NDg3Nn0.h_jb0u2TaypDasg9ORzZcvJ3c1-KpBGU7IvVbjQdluQ"
